--- a/plugin.xml
+++ b/plugin.xml
@@ -36,6 +36,7 @@
 		    <uses-permission android:name="android.permission.READ_SMS" />
 		    <uses-permission android:name="android.permission.WRITE_SMS" />
 		    <uses-permission android:name="android.permission.SEND_SMS" />
+			<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
           </config-file>
           
 		<source-file src="src/android/SMSPlugin.java" target-dir="src/com/rjfun/cordova/sms"/>
